fixed spelling error, added spacing at bottom of pages

--- a/hrs/styles/style.css
+++ b/hrs/styles/style.css
@@ -83,6 +83,7 @@ body img{
     display:block;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 20px;
 }
 
 footer{
